--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ __pycache__/
 .sconf_temp
 .sconsign*.dblite
 *.pyc
+
+# Test-related output files
+/tests/project/out/*
+# Prevent Godot editor to reimport image test output
+!/tests/project/out/.gdignore
