--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,20 @@ jobs:
       os: osx
       osx_image: xcode9.3
       compiler: clang
+      addons:
+        homebrew:
+          packages:
+            - scons
+          update: true
     - env: GODOT_TARGET=iphone TOOLS=no CACHE_NAME=${GODOT_TARGET}-clang
       os: osx
       osx_image: xcode9.3
       compiler: clang
+      addons:
+        homebrew:
+          packages:
+            - scons
+          update: true
     - env: GODOT_TARGET=server TOOLS=no GODOT_BINARY="godot_server.x11.tools.64.llvm" CACHE_NAME=${GODOT_TARGET}-clang
       os: linux
       compiler: clang
@@ -63,7 +73,15 @@ addons:
       - libfreetype6-dev
 
 install:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      pyenv global 3.7.1 system;
+      pip3 install --user scons;
+    fi
+  - scons --version
   - if [ "$TRAVIS_OS_NAME" = "linux" ] && [ "$GODOT_TARGET" = "android" ]; then
+      export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64;
+      export PATH=/usr/lib/jvm/java-8-openjdk-amd64/jre/bin:${PATH};
+      java -version;
       misc/ci/travis/android-tools-linux.sh;
     fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then
