--- a/.github/workflows/macos_builds.yml
+++ b/.github/workflows/macos_builds.yml
@@ -51,10 +51,10 @@ jobs:
         run: |
           scons -j2 verbose=yes warnings=all werror=yes platform=osx tools=yes tests=yes target=release_debug
 
-      # Execute unit tests for the editor
-      - name: Unit Tests
-        run: |
-          ./bin/godot.osx.opt.tools.64 --test
+      # # Execute unit tests for the editor (TODO: Godot 4.0)
+      # - name: Unit Tests
+      #   run: |
+      #     ./bin/godot.osx.opt.tools.64 --test
 
   macos-template:
     runs-on: "macos-latest"
