--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -56,10 +56,10 @@ jobs:
       run: |
         scons -j2 verbose=yes warnings=all werror=yes platform=windows tools=yes tests=yes target=release_debug
 
-    # Execute unit tests for the editor
-    - name: Unit Tests
-      run: |
-        ./bin/godot.windows.opt.tools.64.exe --test
+    # # Execute unit tests for the editor (TODO: Godot 4.0)
+    # - name: Unit Tests
+    #   run: |
+    #     ./bin/godot.windows.opt.tools.64.exe --test
 
 # Build Product Upload (tested and working)
 # sorry this is disabled until github can give us some more space as we would hit our limit very quickly
