--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 # Global Cache Settings
 env:
   GODOT_BASE_BRANCH: master
+  GODOT_BUILTIN_MODULES: disabled
   SCONS_CACHE_LIMIT: 4096
 
 jobs:
