--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -91,7 +91,7 @@ jobs:
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
-        id: linux-editor-cache
+        id: linux-server-cache
         uses: actions/cache@v2
         with:
           path: ${{github.workspace}}/.scons_cache/
@@ -125,7 +125,7 @@ jobs:
         run: |
           scons -j2 verbose=yes warnings=all werror=yes platform=server tools=yes tests=yes target=debug use_asan=yes use_ubsan=yes
 
-      # Execute unit tests with GUT
+      # Execute unit tests with GUT.
       # The `goosts` suffix is correct: `s` stands for sanitizer...
       - name: Run GUT Tests
         run: |
