--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -1,7 +1,6 @@
-name: 🐧 Linux Builds
+name: 🐧 Linux
 on: [push, pull_request]
 
-# Global Cache Settings
 env:
   GODOT_BASE_BRANCH: master
   GODOT_BUILTIN_MODULES: disabled
@@ -10,25 +9,24 @@ env:
 jobs:
   linux-editor:
     runs-on: "ubuntu-20.04"
-    name: Editor w/ Mono (target=release_debug, tools=yes, tests=yes)
+    name: Editor w/ Mono (target=release_debug, tools=yes)
 
     steps:
       - uses: actions/checkout@v2
 
-      # Azure repositories are not reliable, we need to prevent azure giving us packages.
+      # Azure repositories are not reliable, prevent azure giving packages.
       - name: Make apt sources.list use the default Ubuntu repositories
         run: |
           sudo rm -f /etc/apt/sources.list.d/*
           sudo cp -f misc/ci/sources.list /etc/apt/sources.list
           sudo apt-get update
 
-      # Install all packages (except scons)
+      # Install all packages except SCons
       - name: Configure dependencies
         run: |
           sudo apt-get install build-essential pkg-config libx11-dev libxcursor-dev \
             libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm
 
-      # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
         id: linux-editor-cache
         uses: actions/cache@v2
@@ -40,16 +38,12 @@ jobs:
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
 
-      # Use python 3.x release (works cross platform; best to keep self contained in it's own step)
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
-          # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
 
-      # Setup scons, print python version and scons version info, so if anything is broken it won't run the build.
       - name: Configuring Python packages
         run: |
           python -c "import sys; print(sys.version)"
@@ -57,17 +51,11 @@ jobs:
           python --version
           scons --version
 
-      # We should always be explicit with our flags usage here since it's gonna be sure to always set those flags
       - name: Compilation
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons -j2 verbose=yes warnings=all werror=yes platform=linuxbsd tools=yes tests=yes target=release_debug module_mono_enabled=yes mono_glue=no
-
-      # # Execute unit tests for the editor (TODO: Godot 4.0)
-      # - name: Unit Tests
-      #   run: |
-      #     ./bin/godot.x11.opt.tools.64.goost.mono --test
+          scons -j2 verbose=yes warnings=all werror=yes platform=linuxbsd tools=yes target=release_debug module_mono_enabled=yes mono_glue=no
 
   linux-server:
     runs-on: "ubuntu-20.04"
@@ -76,20 +64,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Azure repositories are not reliable, we need to prevent azure giving us packages.
+      # Azure repositories are not reliable, prevent azure giving packages.
       - name: Make apt sources.list use the default Ubuntu repositories
         run: |
           sudo rm -f /etc/apt/sources.list.d/*
           sudo cp -f misc/ci/sources.list /etc/apt/sources.list
           sudo apt-get update
 
-      # Install all packages (except scons)
+      # Install all packages except SCons.
       - name: Configure dependencies
         run: |
           sudo apt-get install build-essential pkg-config libx11-dev libxcursor-dev \
             libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm
 
-      # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
         id: linux-server-cache
         uses: actions/cache@v2
@@ -101,16 +88,12 @@ jobs:
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
 
-      # Use python 3.x release (works cross platform; best to keep self contained in it's own step)
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
-          # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
 
-      # Setup scons, print python version and scons version info, so if anything is broken it won't run the build.
       - name: Configuring Python packages
         run: |
           python -c "import sys; print(sys.version)"
@@ -118,23 +101,15 @@ jobs:
           python --version
           scons --version
 
-      # We should always be explicit with our flags usage here since it's gonna be sure to always set those flags
       - name: Compilation
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons -j2 verbose=yes warnings=all werror=yes platform=server tools=yes tests=yes target=debug
+          scons -j2 verbose=yes warnings=all werror=yes platform=server tools=yes target=debug
 
-      # Execute unit tests with GUT.
-      # The `goosts` suffix is correct: `s` stands for sanitizer...
       - name: Run GUT Tests
         run: |
           tests/run.sh ${{github.workspace}}/godot/bin/godot_server.x11.tools.64.goost
-
-      # # Execute unit tests for the editor (TODO: Godot 4.0)
-      # - name: Unit Tests
-      #   run: |
-      #     ./bin/godot.linuxbsd.tools.64s --test
 
   linux-template:
     runs-on: "ubuntu-20.04"
@@ -143,20 +118,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Azure repositories are not reliable, we need to prevent azure giving us packages.
+      # Azure repositories are not reliable, prevent azure giving packages.
       - name: Make apt sources.list use the default Ubuntu repositories
         run: |
           sudo rm -f /etc/apt/sources.list.d/*
           sudo cp -f misc/ci/sources.list /etc/apt/sources.list
           sudo apt-get update
 
-      # Install all packages (except scons)
+      # Install all packages except SCons.
       - name: Configure dependencies
         run: |
           sudo apt-get install build-essential pkg-config libx11-dev libxcursor-dev \
             libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm
 
-      # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
         id: linux-template-cache
         uses: actions/cache@v2
@@ -168,16 +142,12 @@ jobs:
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
 
-      # Use python 3.x release (works cross platform)
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
-          # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
 
-      # You can test your matrix by printing the current Python version
       - name: Configuring Python packages
         run: |
           python -c "import sys; print(sys.version)"
