--- a/.github/workflows/macos_builds.yml
+++ b/.github/workflows/macos_builds.yml
@@ -1,7 +1,6 @@
-name: 🍎 macOS Builds
+name: 🍎 macOS
 on: [push, pull_request]
 
-# Global Cache Settings
 env:
   GODOT_BASE_BRANCH: master
   GODOT_BUILTIN_MODULES: disabled
@@ -11,12 +10,11 @@ jobs:
   macos-editor:
     runs-on: "macos-latest"
 
-    name: Editor (target=release_debug, tools=yes, tests=yes)
+    name: Editor (target=release_debug, tools=yes)
 
     steps:
       - uses: actions/checkout@v2
 
-      # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
         id: macos-editor-cache
         uses: actions/cache@v2
@@ -28,16 +26,12 @@ jobs:
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
 
-      # Use python 3.x release (works cross platform; best to keep self contained in it's own step)
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
-          # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
 
-      # Setup scons, print python version and scons version info, so if anything is broken it won't run the build.
       - name: Configuring Python packages
         run: |
           python -c "import sys; print(sys.version)"
@@ -45,17 +39,11 @@ jobs:
           python --version
           scons --version
 
-      # We should always be explicit with our flags usage here since it's gonna be sure to always set those flags
       - name: Compilation
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons -j2 verbose=yes warnings=all werror=yes platform=osx tools=yes tests=yes target=release_debug
-
-      # # Execute unit tests for the editor (TODO: Godot 4.0)
-      # - name: Unit Tests
-      #   run: |
-      #     ./bin/godot.osx.opt.tools.64 --test
+          scons -j2 verbose=yes warnings=all werror=yes platform=osx tools=yes target=release_debug
 
   macos-template:
     runs-on: "macos-latest"
@@ -64,7 +52,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
         id: macos-template-cache
         uses: actions/cache@v2
@@ -76,16 +63,12 @@ jobs:
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
             ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
 
-      # Use python 3.x release (works cross platform)
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
-          # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
 
-      # You can test your matrix by printing the current Python version
       - name: Configuring Python packages
         run: |
           python -c "import sys; print(sys.version)"
