--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -8,7 +8,7 @@ on:
       - 'gd3'
 
 env:
-  GODOT_BASE_BRANCH: master
+  GOOST_BASE_BRANCH: gd3
   GODOT_BUILTIN_MODULES: disabled
   SCONS_CACHE_MSVC_CONFIG: true
   SCONS_CACHE_LIMIT: 4096
@@ -27,11 +27,11 @@ jobs:
       uses: RevoluPowered/cache@v2.1
       with:
         path: /.scons_cache/
-        key: ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
+        key: ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
         restore-keys: |
-          ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
-          ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
-          ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
+          ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
+          ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}
+          ${{github.job}}-${{env.GOOST_BASE_BRANCH}}
 
     - name: Set up Python 3.x
       uses: actions/setup-python@v2
@@ -66,11 +66,11 @@ jobs:
       uses: RevoluPowered/cache@v2.1
       with:
         path: /.scons_cache/
-        key: ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
+        key: ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
         restore-keys: |
-          ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
-          ${{github.job}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}
-          ${{github.job}}-${{env.GODOT_BASE_BRANCH}}
+          ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
+          ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}
+          ${{github.job}}-${{env.GOOST_BASE_BRANCH}}
 
     - name: Set up Python 3.x
       uses: actions/setup-python@v2
