--- a/.github/workflows/macos_builds.yml
+++ b/.github/workflows/macos_builds.yml
@@ -51,6 +51,11 @@ jobs:
         run: |
           scons -j2 verbose=yes warnings=all werror=yes platform=osx tools=yes target=release_debug
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: godot.osx.opt.tools.64.goost
+          path: godot/bin/godot.osx.opt.tools.64.goost
+
   macos-template:
     runs-on: "macos-latest"
     name: Template (target=release, tools=no)
