SCons: Add build options to replace some env vars

--- a/.github/workflows/android_builds.yml
+++ b/.github/workflows/android_builds.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   GOOST_BASE_BRANCH: gd3
-  GODOT_BUILTIN_MODULES: disabled
+  SCONSFLAGS: godot_modules_enabled=no --jobs=4
   SCONS_CACHE_LIMIT: 4096
 
 jobs:
@@ -70,4 +70,4 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons -j2 verbose=yes warnings=all werror=yes platform=android target=release tools=no
+          scons verbose=yes warnings=all werror=yes platform=android target=release tools=no
