--- a/.gitignore
+++ b/.gitignore
@@ -38,11 +38,12 @@
 # Cache
 __pycache__/
 
-# For projects that use SCons for building: http://http://www.scons.org/
+# SCons
 .sconf_temp
 .sconsign*.dblite
 *.pyc
 .scons_cache
+custom.py
 
 # Test-related output files
 /tests/project/out/*
