CI: Fix Javascript builds

--- a/.github/workflows/android_builds.yml
+++ b/.github/workflows/android_builds.yml
@@ -67,4 +67,4 @@ jobs:
           cd godot/platform/android/java
           ./gradlew generateGodotTemplates
           cd ../../../..
-          ls -l bin/
+          ls -l godot/bin/
