--- a/.github/workflows/javascript_builds.yml
+++ b/.github/workflows/javascript_builds.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   GOOST_BASE_BRANCH: gd3
-  SCONSFLAGS: godot_modules_enabled=no --jobs=4
+  SCONSFLAGS: godot_modules_enabled=no platform=javascript verbose=yes warnings=all werror=yes --jobs=4
   SCONS_CACHE_LIMIT: 4096
   EM_VERSION: 1.39.20
   EM_CACHE_FOLDER: 'emsdk-cache'
@@ -29,6 +29,7 @@ jobs:
           sudo cp -f misc/ci/sources.list /etc/apt/sources.list
           sudo apt-get update
 
+      # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
         id: javascript-template-cache
         uses: actions/cache@v2
@@ -40,6 +41,7 @@ jobs:
             ${{github.job}}-${{env.GOOST_BASE_BRANCH}}-${{github.ref}}
             ${{github.job}}-${{env.GOOST_BASE_BRANCH}}
 
+      # Additional cache for Emscripten generated system libraries
       - name: Load Emscripten cache
         id: javascript-template-emscripten-cache
         uses: actions/cache@v2
@@ -47,10 +49,13 @@ jobs:
           path: ${{env.EM_CACHE_FOLDER}}
           key: ${{env.EM_VERSION}}-${{github.job}}
 
+      # Use python 3.x release (works cross platform)
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
+          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
 
       - name: Configuring Python packages
@@ -61,7 +66,7 @@ jobs:
           scons --version
 
       - name: Set up Emscripten latest
-        uses: mymindstorm/setup-emsdk@v6
+        uses: mymindstorm/setup-emsdk@v7
         with:
           version: ${{env.EM_VERSION}}
           actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
@@ -74,4 +79,5 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons verbose=yes warnings=all werror=yes platform=javascript target=release tools=no use_closure_compiler=yes
+          scons target=release tools=no use_closure_compiler=yes
+          ls -l godot/bin/
