Add a script to easily run tests, generate documentation and run editor
The script will be especially useful for new contributors. The process of running unit tests was not as intuitive as it could be since you also had to specify the exact paths to test project and main test scripts.

After you've built Godot with Goost, the usage should be simple:
```
python run.py tests   # Run unit tests.
python run.py doc     # Generate or update documentation.
python run.py editor # Open the test project in the editor.
```

Note that this will only work for the default development instructions (when you build with `scons` command from within Goost root), as this relies on particular directory structure.

--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -118,9 +118,9 @@ jobs:
         run: |
           scons verbose=yes warnings=all werror=yes platform=server tools=yes target=debug
 
-      - name: Run GUT Tests
+      - name: Run unit tests
         run: |
-          tests/run.sh ${{github.workspace}}/godot/bin/godot_server.x11.tools.64.goost
+          python run.py tests
 
   linux-template:
     runs-on: "ubuntu-20.04"
