Add Git version control editor plugin
This integrates Git as a version control backend directly using C++ modules rather than GDNative.

Unfortunately, it's not possible to select the Git addon via editor interface manually, because the interface was implemented to work with scripts that implement VCS addons. Therefore, unlike GDNative version, the Git addon is initialized automatically here at runtime, without needing to manually to create and assign GDNative-like scripts.

The initial implementation is based on https://github.com/godotengine/godot-git-plugin.

Co-authored-by: Twarit Waikar <wtwarit@gmail.com>

--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       # Azure repositories are not reliable, prevent azure giving packages.
       - name: Make apt sources.list use the default Ubuntu repositories
