Fix not detecting SVG module

--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -137,7 +137,7 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons platform=server tools=yes target=debug debug_symbols=yes module_svg_enabled=yes goost_components_enabled=yes
+          scons platform=server tools=yes target=debug debug_symbols=yes goost_components_enabled=yes
 
       - name: Run unit tests
         run: |
