CI: Enable sanitizers for unit tests
We've fixed quite a bunch of bugs, so this may allow us to run tests with sanitizers in CI checks.

--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -232,7 +232,7 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons platform=server tools=yes target=debug debug_symbols=yes goost_components_enabled=yes
+          scons platform=server tools=yes target=debug debug_symbols=yes tests=yes use_asan=yes goost_components_enabled=yes 
 
       - name: Run unit tests
         run: |
