CI: Upload server debug builds with address sanitizer
[tests skip]

--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -265,3 +265,8 @@ jobs:
       - name: Run unit tests
         run: |
           python run.py --windowed tests
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: godot.goost.server
+          path: godot/bin/*
