Update Android CI to use JDK 11

--- a/.github/workflows/android_builds.yml
+++ b/.github/workflows/android_builds.yml
@@ -21,10 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Java 8
+      - name: Set up Java
         uses: actions/setup-java@v1
         with:
-          java-version: 8
+          java-version: 11
 
       - name: Load .scons_cache directory
         id: android-template-cache
